@@ -1,11 +1,15 @@
 buildscript {
     ext {
         group "ksbysample"
-        version "2.1.4-RELEASE"
+        version "2.2.7-RELEASE"
     }
     repositories {
         mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
+        gradlePluginPortal()
+    }
+    dependencies {
+        // for doma-codegen-plugin
+        classpath "com.h2database:h2:1.4.200"
     }
 }
 
@@ -13,25 +17,26 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "org.springframework.boot" version "2.1.4.RELEASE"
-    id "io.spring.dependency-management" version "1.0.7.RELEASE"
+    id "org.springframework.boot" version "2.2.7.RELEASE"
+    id "io.spring.dependency-management" version "1.0.9.RELEASE"
     id "groovy"
-    id "net.ltgt.errorprone" version "0.7.1"
+    id "net.ltgt.errorprone" version "1.1.1"
     id "checkstyle"
-    id "com.github.spotbugs" version "1.6.9"
+    id "com.github.spotbugs" version "4.0.8"
     id "pmd"
     id "com.moowork.node" version "1.3.1"
-    id "com.gorylenko.gradle-git-properties" version "2.0.0"
+    id "com.gorylenko.gradle-git-properties" version "2.2.2"
 // Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
 //    id "com.github.johnrengelman.processes" version "0.5.0"
     id "com.energizedwork.webdriver-binaries" version "1.4"
+    id "org.seasar.doma.codegen" version "0.0.2"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
 wrapper {
-    gradleVersion = "5.3.1"
+    gradleVersion = "6.4"
     distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -51,10 +56,16 @@ tasks.named("compileTestJava").configure {
 //}
 
 // for Doma 2
-// JavaクラスとSQLファイルの出力先ディレクトリを同じにする
-processResources.destinationDir = compileJava.destinationDir
-// コンパイルより前にSQLファイルを出力先ディレクトリにコピーするために依存関係を逆転する
-compileJava.dependsOn processResources
+// Copy the resources referred by the Doma annotation processors to
+// the destinationDir of the compileJava task
+task copyDomaResources(type: Sync) {
+    from sourceSets.main.resources.srcDirs
+    into compileJava.destinationDir
+    include "doma.compile.config"
+    include "META-INF/**/*.sql"
+    include "META-INF/**/*.script"
+}
+compileJava.dependsOn copyDomaResources
 
 springBoot {
     buildInfo()
@@ -68,52 +79,46 @@ idea {
 }
 
 configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+
     // annotationProcessor と testAnnotationProcessor、compileOnly と testCompileOnly を併記不要にする
     testAnnotationProcessor.extendsFrom annotationProcessor
     testImplementation.extendsFrom compileOnly
 
-    // for Doma 2
-    domaGenRuntime
+    // for SpotBugs
+    spotbugsStylesheets { transitive = false }
 }
 
 checkstyle {
     configFile = file("${rootProject.projectDir}/config/checkstyle/google_checks.xml")
-    toolVersion = "8.19"
+    toolVersion = "8.32"
     sourceSets = [project.sourceSets.main]
 }
 
 spotbugs {
-    // SpotBugs のレポートファイルは Firefox で見ると文字化けしない
-    toolVersion = "3.1.11"
     ignoreFailures = true
-    effort = "max"
-    excludeFilter = file("${rootProject.projectDir}/config/spotbugs/spotbugs-exclude-filter.xml")
+    toolVersion = "4.0.2"
     spotbugsTest.enabled = false
 }
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
+spotbugsMain {
     reports {
-        xml.enabled = false
-        html.enabled = true
+        html {
+            enabled = true
+            stylesheet = "color.xsl"
+        }
     }
 }
 
 pmd {
-    toolVersion = "6.13.0"
+    toolVersion = "6.23.0"
     sourceSets = [project.sourceSets.main]
     ignoreFailures = true
     consoleOutput = true
     ruleSetFiles = rootProject.files("/config/pmd/pmd-project-rulesets.xml")
     ruleSets = []
-}
-pmdMain {
-    def backupLoggerLevel
-    doFirst {
-        backupLoggerLevel = logger.context.level
-        logger.context.level = LogLevel.QUIET
-    }
-    doLast {
-        logger.context.level = backupLoggerLevel
-    }
 }
 
 repositories {
@@ -127,18 +132,18 @@ dependencyManagement {
         // bomProperty に指定可能な property は以下の URL の BOM に記述がある
         // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.1.4.RELEASE/spring-boot-dependencies-2.1.4.RELEASE.pom
         mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
-        mavenBom("org.junit:junit-bom:5.4.2")
+        mavenBom("org.junit:junit-bom:5.6.2")
     }
 }
 
 dependencies {
     def spockVersion = "1.3-groovy-2.5"
-    def domaVersion = "2.24.0"
-    def lombokVersion = "1.18.6"
-    def errorproneVersion = "2.3.3"
-    def powermockVersion = "2.0.0"
-    def seleniumVersion = "3.13.0"
-    def spotbugsVersion = "3.1.11"
+    def domaVersion = "2.34.0"
+    def lombokVersion = "1.18.12"
+    def errorproneVersion = "2.3.4"
+    def powermockVersion = "2.0.7"
+    def seleniumVersion = "3.141.59"
+    def spotbugsVersion = "4.0.2"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
     // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/2.1.4.RELEASE/reference/html/appendix-dependency-versions.html ) 参照
@@ -153,33 +158,33 @@ dependencies {
     implementation("org.springframework.session:spring-session-core")
     implementation("org.springframework.session:spring-session-jdbc")
     implementation("org.codehaus.janino:janino")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
+    }
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.yaml:snakeyaml")
 
     // dependency-management-plugin によりバージョン番号が自動で設定されないもの、あるいは最新バージョンを指定したいもの
-    implementation("com.integralblue:log4jdbc-spring-boot-starter:1.0.2")
+    implementation("com.integralblue:log4jdbc-spring-boot-starter:2.0.0")
     implementation("org.flywaydb:flyway-core:5.2.4")
-    implementation("com.h2database:h2:1.4.192")
-    implementation("com.github.rozidan:modelmapper-spring-boot-starter:1.0.0")
+    implementation("com.h2database:h2:1.4.200")
+    implementation("com.github.rozidan:modelmapper-spring-boot-starter:2.3.1")
     implementation("com.google.guava:guava:27.1-jre")
     implementation("org.apache.commons:commons-lang3:3.8.1")
-    testImplementation("org.dbunit:dbunit:2.6.0")
-    testImplementation("org.assertj:assertj-core:3.12.2")
+    testImplementation("org.dbunit:dbunit:2.7.0")
+    testImplementation("org.assertj:assertj-core:3.16.0")
     testImplementation("org.spockframework:spock-core:${spockVersion}")
     testImplementation("org.spockframework:spock-spring:${spockVersion}")
-    testImplementation("org.jsoup:jsoup:1.11.3")
-    testImplementation("com.icegreen:greenmail:1.5.10")
+    testImplementation("org.jsoup:jsoup:1.13.1")
+    testImplementation("com.icegreen:greenmail:1.5.13")
 
     // for lombok
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
 
     // for Doma
-    annotationProcessor("org.seasar.doma:doma:${domaVersion}")
-    implementation("org.seasar.doma:doma:${domaVersion}")
-    domaGenRuntime("org.seasar.doma:doma-gen:${domaVersion}")
-    domaGenRuntime("com.h2database:h2:1.4.192")
+    implementation("org.seasar.doma:doma-core:${domaVersion}")
+    annotationProcessor("org.seasar.doma:doma-processor:${domaVersion}")
 
     // for Error Prone ( http://errorprone.info/ )
     errorprone("com.google.errorprone:error_prone_core:${errorproneVersion}")
@@ -190,7 +195,7 @@ dependencies {
     testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
 
     // for Geb + Spock
-    testImplementation("org.gebish:geb-spock:2.3.1") {
+    testImplementation("org.gebish:geb-spock:3.4") {
         exclude group: "org.codehaus.groovy", module: "groovy-all"
     }
     testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:${seleniumVersion}")
@@ -204,6 +209,8 @@ dependencies {
     compileOnly("net.jcip:jcip-annotations:1.0")
     compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}")
     testImplementation("com.google.code.findbugs:jsr305:3.0.2")
+    spotbugsStylesheets("com.github.spotbugs:spotbugs:${spotbugsVersion}")
+    spotbugsPlugins("com.h3xstream.findsecbugs:findsecbugs-plugin:1.10.1")
 
     // for JUnit 5
     // junit-jupiter で junit-jupiter-api, junit-jupiter-params, junit-jupiter-engine の３つが依存関係に追加される
@@ -224,10 +231,13 @@ def jvmArgsAddOpens = [
         "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
         "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
         "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.math=ALL-UNNAMED",
         "--add-opens=java.base/java.net=ALL-UNNAMED",
         "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
         "--add-opens=java.base/java.security=ALL-UNNAMED",
+        "--add-opens=java.base/java.time=ALL-UNNAMED",
         "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.function=ALL-UNNAMED",
         "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
         "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
         "--add-opens=java.desktop/java.beans=ALL-UNNAMED"
@@ -241,7 +251,10 @@ def printTestCount = { desc, result ->
 bootRun {
     jvmArgs = jvmArgsForTask +
             jvmArgsAddOpens +
-            ["-Dspring.profiles.active=develop"]
+            [
+                    "-Dspring.profiles.active=develop",
+                    "-XX:TieredStopAtLevel=1"
+            ]
 }
 
 tasks.withType(Test) {
@@ -307,8 +320,8 @@ processResources.dependsOn npmBuild
 //    }
 //}
 webdriverBinaries {
-    chromedriver "73.0.3683.68"
-    geckodriver "0.24.0"
+    chromedriver "81.0.4044.69"
+    geckodriver "0.26.0"
 }
 def drivers = ["chrome", "firefox"]
 drivers.each { driver ->
@@ -331,42 +344,55 @@ task gebTest {
     enabled = false
 }
 
-// for Doma-Gen
-task domaGen {
+// for doma-codegen-plugin
+// まず変更が必要なもの
+def rootPackageName = "ksbysample.webapp.bootnpmgeb"
+def rootPackagePath = "src/main/java/ksbysample/webapp/bootnpmgeb"
+def dbUrl = "jdbc:h2:tcp://localhost:9092/mem:bootnpmgebdb"
+def dbUser = "sa"
+def dbPassword = ""
+def dbTableNamePattern = ".*"
+// おそらく変更不要なもの
+def entityPackagePath = rootPackagePath + "/entity"
+def daoPackagePath = rootPackagePath + "/dao"
+def importOfComponentAndAutowiredDomaConfig = "${rootPackageName}.util.doma.ComponentAndAutowiredDomaConfig"
+def workDirPath = "work"
+def workEntityDirPath = "${workDirPath}/entity"
+def workDaoDirPath = "${workDirPath}/dao"
+task domaGen(group: "doma code generation") {
+    // このタスク自体は何もしない。実行する時の起点用タスクとして作成している。
+}
+task beforeDomaCodeGen {
     doLast {
-        // まず変更が必要なもの
-        def rootPackageName = "ksbysample.webapp.bootnpmgeb"
-        def rootPackagePath = "src/main/java/ksbysample/webapp/bootnpmgeb"
-        def dbUrl = "jdbc:h2:tcp://localhost:9092/mem:bootnpmgebdb"
-        def dbUser = "sa"
-        def dbPassword = ""
-        def tableNamePattern = ".*"
-        // おそらく変更不要なもの
-        def entityPackagePath = rootPackagePath + "/entity"
-        def daoPackagePath = rootPackagePath + "/dao"
-        def importOfComponentAndAutowiredDomaConfig = "${rootPackageName}.util.doma.ComponentAndAutowiredDomaConfig"
-        def workDirPath = "work"
-        def workEntityDirPath = "${workDirPath}/entity"
-        def workDaoDirPath = "${workDirPath}/dao"
-
         // 作業用ディレクトリを削除する
-        clearDir("${workDirPath}")
+        delete "${workDirPath}"
 
         // 現在の Dao インターフェースのバックアップを取得する
         copy() {
             from "${daoPackagePath}"
             into "${workDaoDirPath}/org"
         }
-
-        // Dao インターフェース、Entity クラスを生成する
-        ant.taskdef(resource: 'domagentask.properties',
-                classpath: configurations.domaGenRuntime.asPath)
-        ant.gen(url: "${dbUrl}", user: "${dbUser}", password: "${dbPassword}", tableNamePattern: "${tableNamePattern}") {
-            entityConfig(packageName: "${rootPackageName}.entity", useListener: false)
-            daoConfig(packageName: "${rootPackageName}.dao")
-            sqlConfig()
+    }
+}
+domaCodeGen {
+    db {
+        url = "${dbUrl}"
+        user = "${dbUser}"
+        password = "${dbPassword}"
+        tableNamePattern = "${dbTableNamePattern}"
+        ignoredTableNamePattern = "flyway_schema_history|SPRING_SESSION.*"
+        entity {
+            packageName = "${rootPackageName}.entity"
+            useListener = false
         }
-
+        dao {
+            overwrite = true
+            packageName = "${rootPackageName}.dao"
+        }
+    }
+}
+task afterDomaCodeGen {
+    doLast {
         // 生成された Entity クラスを作業用ディレクトリにコピーし、
         // @SuppressWarnings({"PMD.TooManyFields"}) アノテーションを付加する
         copy() {
@@ -413,14 +439,10 @@ task domaGen {
         }
 
         // 作業用ディレクトリを削除する
-        clearDir("${workDirPath}")
+        delete "${workDirPath}"
     }
 }
-
-/* -----------------------------------------------------------------------------
- * メソッド定義部
- ---------------------------------------------------------------------------- */
-
-void clearDir(String dirPath) {
-    delete dirPath
-}
+// 内部で domaCodeGenDbDao.dependsOn domaCodeGenDbEntity になっている
+domaCodeGenDbEntity.dependsOn beforeDomaCodeGen
+domaGen.dependsOn domaCodeGenDbDao
+domaGen.finalizedBy afterDomaCodeGen
